// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hello1.4gl 1`] = `
main 
  display "hello "
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
functionmain([])
`;

exports[`hello2.4gl 1`] = `
main 

  define nome char(50) # abc
  prompt "digite seu nome : " for nome
  
  call fgl_winmessage( "hello",nome, "info")
  
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
functionmain([])
`;

exports[`hello3.4gl 1`] = `
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

`;
